--- a/GameNest/Views/Shared/_Layout.cshtml
+++ b/GameNest/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <a asp-controller="Home" asp-action="Index" class="navbar-brand menu-item" style="color:rgba(98,95,99,1)">Home</a>
                 </li>
                 <li style="height:40px">
-                    <a class="navbar-brand menu-item" style="color:rgba(98,95,99,1)">Game</a>
+                    <a class="navbar-brand menu-item" href="#" style="color:rgba(98,95,99,1)">Games</a>
                 </li>
             </ul>
         </nav>
@@ -48,7 +48,7 @@
     </div>
    
 
-    @RenderSection("Scripts",required:false);
+    @RenderSection("Scripts",required:false)
 </body>
 
 <script>
